--- a/views/index.html
+++ b/views/index.html
@@ -91,6 +91,9 @@
                     <button id="btnXacNhan" class="btn btn-success btnXacNhan">Xác Nhận</button>
                     <button id="btnLuuThongTin" class="btn btn-primary btnLuuThongTin">Luu thong tin</button>
                 </div>
+                <div class="container">
+                    <button>Search</button>
+                </div>
                 <table class="table">
                     <thead>
                         <tr>
