them Another Search

--- a/views/index.html
+++ b/views/index.html
@@ -92,6 +92,7 @@
                     <button id="btnLuuThongTin" class="btn btn-primary btnLuuThongTin">Luu thong tin</button>
                 </div>
                 <div class="container">
+                    <button>Another <i class="fa fa-search" aria-hidden="true"></i></button>
                     <button>Search</button>
                 </div>
                 <table class="table">
